--- a/tasks/section3.yml
+++ b/tasks/section3.yml
@@ -1,7 +1,7 @@
 ---
-- name: "SCORED | 3.1.1 | PATCH | Ensure IP forwarding is disabled"
+- name: "SCORED | 3_1_1 | PATCH | Ensure IP forwarding is disabled"
   sysctl:
-      name: net.ipv4.ip_forward
+      name: net_ipv4_ip_forward
       value: 0
       state: present
       reload: true
@@ -14,19 +14,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.1.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_1_1_Ensure_IP_forwarding_is_disabled
 
-- name: "SCORED | 3.1.2 | PATCH | Ensure packet redirect sending is disabled"
+- name: "SCORED | 3_1_2 | PATCH | Ensure packet redirect sending is disabled"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.send_redirects, value: 0 }
-      - { name: net.ipv4.conf.default.send_redirects, value: 0 }
+      - { name: net_ipv4_conf_all_send_redirects, value: 0 }
+      - { name: net_ipv4_conf_default_send_redirects, value: 0 }
   when: ubuntu1804cis_is_router == false
   notify:
       - sysctl flush ipv4 route table
@@ -35,19 +35,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.1.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_1_2_Ensure_packet_redirect_sending_is_disabled
 
-- name: "SCORED | 3.2.1 | PATCH | Ensure source routed packets are not accepted"
+- name: "SCORED | 3_2_1 | PATCH | Ensure source routed packets are not accepted"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.accept_source_route, value: 0 }
-      - { name: net.ipv4.conf.default.accept_source_route, value: 0 }
+      - { name: net_ipv4_conf_all_accept_source_route, value: 0 }
+      - { name: net_ipv4_conf_default_accept_source_route, value: 0 }
   notify:
       - sysctl flush ipv4 route table
   tags:
@@ -55,19 +55,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_1_Ensure_source_routed_packets_are_not_accepted
 
-- name: "SCORED | 3.2.2 | PATCH | Ensure ICMP redirects are not accepted"
+- name: "SCORED | 3_2_2 | PATCH | Ensure ICMP redirects are not accepted"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.accept_redirects, value: 0 }
-      - { name: net.ipv4.conf.default.accept_redirects, value: 0 }
+      - { name: net_ipv4_conf_all_accept_redirects, value: 0 }
+      - { name: net_ipv4_conf_default_accept_redirects, value: 0 }
   notify:
       - sysctl flush ipv4 route table
   tags:
@@ -75,19 +75,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_2_Ensure_ICMP_redirects_are_not_accepted
 
-- name: "SCORED | 3.2.3 | PATCH | Ensure secure ICMP redirects are not accepted"
+- name: "SCORED | 3_2_3 | PATCH | Ensure secure ICMP redirects are not accepted"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.secure_redirects, value: 0 }
-      - { name: net.ipv4.conf.default.secure_redirects, value: 0 }
+      - { name: net_ipv4_conf_all_secure_redirects, value: 0 }
+      - { name: net_ipv4_conf_default_secure_redirects, value: 0 }
   notify:
       - sysctl flush ipv4 route table
   tags:
@@ -95,19 +95,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.3
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_3_Ensure_secure_ICMP_redirects_are_not_accepted
 
-- name: "SCORED | 3.2.4 | PATCH | Ensure suspicious packets are logged"
+- name: "SCORED | 3_2_4 | PATCH | Ensure suspicious packets are logged"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.log_martians, value: 1 }
-      - { name: net.ipv4.conf.default.log_martians, value: 1 }
+      - { name: net_ipv4_conf_all_log_martians, value: 1 }
+      - { name: net_ipv4_conf_default_log_martians, value: 1 }
   notify:
       - sysctl flush ipv4 route table
   tags:
@@ -115,11 +115,11 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.4
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_4_Ensure_suspicious_packets_are_logged
 
-- name: "SCORED | 3.2.5 | PATCH | Ensure broadcast ICMP requests are ignored"
+- name: "SCORED | 3_2_5 | PATCH | Ensure broadcast ICMP requests are ignored"
   sysctl:
-      name: net.ipv4.icmp_echo_ignore_broadcasts
+      name: net_ipv4_icmp_echo_ignore_broadcasts
       value: 1
       state: present
       reload: true
@@ -131,11 +131,11 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.5
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_5_Ensure_broadcast_ICMP_requests_are_ignored
 
-- name: "SCORED | 3.2.6 | PATCH | Ensure bogus ICMP responses are ignored"
+- name: "SCORED | 3_2_6 | PATCH | Ensure bogus ICMP responses are ignored"
   sysctl:
-      name: net.ipv4.icmp_ignore_bogus_error_responses
+      name: net_ipv4_icmp_ignore_bogus_error_responses
       value: 1
       state: present
       reload: true
@@ -147,19 +147,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.6
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_6_Ensure_bogus_ICMP_responses_are_ignored
 
-- name: "SCORED | 3.2.7 | PATCH | Ensure Reverse Path Filtering is enabled"
+- name: "SCORED | 3_2_7 | PATCH | Ensure Reverse Path Filtering is enabled"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv4.conf.all.rp_filter, value: 1 }
-      - { name: net.ipv4.conf.default.rp_filter, value: 1 }
+      - { name: net_ipv4_conf_all_rp_filter, value: 1 }
+      - { name: net_ipv4_conf_default_rp_filter, value: 1 }
   notify:
       - sysctl flush ipv4 route table
   tags:
@@ -167,11 +167,11 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.7
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_7_Ensure_Reverse_Path_Filtering_is_enabled
 
-- name: "SCORED | 3.2.8 | PATCH | Ensure TCP SYN Cookies is enabled"
+- name: "SCORED | 3_2_8 | PATCH | Ensure TCP SYN Cookies is enabled"
   sysctl:
-      name: net.ipv4.tcp_syncookies
+      name: net_ipv4_tcp_syncookies
       value: 1
       state: present
       reload: true
@@ -183,19 +183,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.2.8
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_2_8_Ensure_TCP_SYN_Cookies_is_enabled
 
-- name: "SCORED | 3.3.1 | PATCH | Ensure IPv6 router advertisements are not accepted"
+- name: "SCORED | 3_3_1 | PATCH | Ensure IPv6 router advertisements are not accepted"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv6.conf.all.accept_ra, value: 0 }
-      - { name: net.ipv6.conf.default.accept_ra, value: 0 }
+      - { name: net_ipv6_conf_all_accept_ra, value: 0 }
+      - { name: net_ipv6_conf_default_accept_ra, value: 0 }
   when: ubuntu1804cis_ipv6_required == true
   notify:
       - sysctl flush ipv6 route table
@@ -204,19 +204,19 @@
       - scored
       - patch
       - sysctl
-      - rule_3.3.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_3_1_Ensure_IPv6_router_advertisements_are_not_accepted
 
-- name: "SCORED | 3.3.2 | PATCH | Ensure IPv6 redirects are not accepted"
+- name: "SCORED | 3_3_2 | PATCH | Ensure IPv6 redirects are not accepted"
   sysctl:
-      name: '{{ item.name }}'
-      value: '{{ item.value }}'
+      name: '{{ item_name }}'
+      value: '{{ item_value }}'
       sysctl_set: true
       state: present
       reload: true
       ignoreerrors: true
   with_items:
-      - { name: net.ipv6.conf.all.accept_redirects, value: 0 }
-      - { name: net.ipv6.conf.default.accept_redirects, value: 0 }
+      - { name: net_ipv6_conf_all_accept_redirects, value: 0 }
+      - { name: net_ipv6_conf_default_accept_redirects, value: 0 }
   when: ubuntu1804cis_ipv6_required == true
   notify:
       - sysctl flush ipv6 route table
@@ -225,11 +225,11 @@
       - scored
       - patch
       - sysctl
-      - rule_3.3.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_3_2_Ensure_IPv6_redirects_are_not_accepted
 
-- name: "NOTSCORED | 3.3.3 | PATCH | Ensure IPv6 is disabled"
+- name: "NOTSCORED | 3_3_3 | PATCH | Ensure IPv6 is disabled"
   lineinfile:
-      dest: /etc/modprobe.d/CIS.conf
+      dest: /etc/modprobe_d/CIS_conf
       regexp: "^(#)?options ipv6 disable="
       line: "options ipv6 disable=1"
       create: true
@@ -238,9 +238,9 @@
       - level1
       - notscored
       - patch
-      - rule_3.3.3
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_3_3_Ensure_IPv6_is_disabled
 
-- name: "SCORED | 3.4.1 | PATCH | Ensure TCP Wrappers is installed"
+- name: "SCORED | 3_4_1 | PATCH | Ensure TCP Wrappers is installed"
   apt:
       name: "{{ tcp_wrapper_package[ansible_os_family] }}"
       state: present
@@ -249,12 +249,12 @@
       - level1
       - scored
       - patch
-      - rule_3.4.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_4_1_Ensure_TCP_Wrappers_is_installed
 
-- name: "SCORED | 3.4.2 | PATCH | Ensure /etc/hosts.allow is configured"
+- name: "SCORED | 3_4_2 | PATCH | Ensure /etc/hosts_allow is configured"
   template:
-      src: hosts.allow.j2
-      dest: /etc/hosts.allow
+      src: hosts_allow_j2
+      dest: /etc/hosts_allow
       owner: root
       group: root
       mode: 0644
@@ -262,22 +262,22 @@
       - level1
       - scored
       - patch
-      - rule_3.4.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_4_2_Ensure_etchosts_allow_is_configured
 
-- name: "SCORED | 3.4.3 | PATCH | Ensure /etc/hosts.deny is configured"
+- name: "SCORED | 3_4_3 | PATCH | Ensure /etc/hosts_deny is configured"
   lineinfile:
-      dest: /etc/hosts.deny
+      dest: /etc/hosts_deny
       regexp: "^(#)?ALL"
       line: "ALL: ALL"
   tags:
       - level1
       - scored
       - patch
-      - rule_3.4.3
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_4_3_Ensure_etchosts_deny_is_configured
 
-- name: "SCORED | 3.4.4 | PATCH | Ensure permissions on /etc/hosts.allow are configured"
+- name: "SCORED | 3_4_4 | PATCH | Ensure permissions on /etc/hosts_allow are configured"
   file:
-      dest: /etc/hosts.allow
+      dest: /etc/hosts_allow
       owner: root
       group: root
       mode: 0644
@@ -285,11 +285,11 @@
       - level1
       - scored
       - patch
-      - rule_3.4.4
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_4_4_Ensure_permissions_on_etchosts_allow_are_configured
 
-- name: "SCORED | 3.4.5 | PATCH | Ensure permissions on /etc/hosts.deny are 644"
+- name: "SCORED | 3_4_5 | PATCH | Ensure permissions on /etc/hosts_deny are 644"
   file:
-      dest: /etc/hosts.deny
+      dest: /etc/hosts_deny
       owner: root
       group: root
       mode: 0644
@@ -297,11 +297,11 @@
       - level1
       - scored
       - patch
-      - rule_3.4.5
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_4_5_Ensure_permissions_on_etchosts_deny_are_644
 
-- name: "NOTSCORED | 3.5.1 | PATCH | Ensure DCCP is disabled"
+- name: "NOTSCORED | 3_5_1 | PATCH | Ensure DCCP is disabled"
   lineinfile:
-      dest: /etc/modprobe.d/CIS.conf
+      dest: /etc/modprobe_d/CIS_conf
       regexp: "^(#)?install dccp(\\s|$)"
       line: "install dccp /bin/true"
       create: true
@@ -309,11 +309,11 @@
       - level1
       - notscored
       - patch
-      - rule_3.5.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_5_1_Ensure_DCCP_is_disabled
 
-- name: "NOTSCORED | 3.5.2 | PATCH | Ensure SCTP is disabled"
+- name: "NOTSCORED | 3_5_2 | PATCH | Ensure SCTP is disabled"
   lineinfile:
-      dest: /etc/modprobe.d/CIS.conf
+      dest: /etc/modprobe_d/CIS_conf
       regexp: "^(#)?install sctp(\\s|$)"
       line: "install sctp /bin/true"
       create: true
@@ -321,11 +321,11 @@
       - level1
       - notscored
       - patch
-      - rule_3.5.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_5_2_Ensure_SCTP_is_disabled
 
-- name: "NOTSCORED | 3.5.3 | PATCH | Ensure RDS is disabled"
+- name: "NOTSCORED | 3_5_3 | PATCH | Ensure RDS is disabled"
   lineinfile:
-      dest: /etc/modprobe.d/CIS.conf
+      dest: /etc/modprobe_d/CIS_conf
       regexp: "^(#)?install rds(\\s|$)"
       line: "install rds /bin/true"
       create: true
@@ -333,11 +333,11 @@
       - level1
       - notscored
       - patch
-      - rule_3.5.3
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_5_3_Ensure_RDS_is_disabled
 
-- name: "NOTSCORED | 3.5.4 | PATCH | Ensure TIPC is disabled"
+- name: "NOTSCORED | 3_5_4 | PATCH | Ensure TIPC is disabled"
   lineinfile:
-      dest: /etc/modprobe.d/CIS.conf
+      dest: /etc/modprobe_d/CIS_conf
       regexp: "^(#)?install tipc(\\s|$)"
       line: "install tipc /bin/true"
       create: true
@@ -345,9 +345,9 @@
       - level1
       - notscored
       - patch
-      - rule_3.5.4
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_5_4_Ensure_TIPC_is_disabled
 
-- name: "SCORED | 3.6 | PATCH | Ensure firewalld is installed and started | CUSTOM"
+- name: "SCORED | 3_6 | PATCH | Ensure firewalld is installed and started | CUSTOM"
   apt:
       name: firewalld
       state: present
@@ -357,9 +357,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6
+      - rule_3_6
 
-- name: "SCORED | 3.6 | PATCH | Ensure firewalld is installed and started | CUSTOM"
+- name: "SCORED | 3_6 | PATCH | Ensure firewalld is installed and started | CUSTOM"
   service:
       name: firewalld
       state: started
@@ -369,9 +369,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6
+      - rule_3_6
 
-- name: "SCORED | 3.6.1 | PATCH | Ensure iptables is installed"
+- name: "SCORED | 3_6_1 | PATCH | Ensure iptables is installed"
   apt:
       name: iptables
       state: present
@@ -381,9 +381,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_1_Ensure_iptables_is_installed
 
-- name: "SCORED | 3.6.1 | PATCH | Ensure iptables is installed and started"
+- name: "SCORED | 3_6_1 | PATCH | Ensure iptables is installed and started"
   service:
       name: iptables
       state: started
@@ -393,11 +393,11 @@
       - level1
       - scored
       - patch
-      - rule_3.6.1
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_1_Ensure_iptables_is_installed
 
-- name: "SCORED | 3.6.2 | PATCH | Ensure default deny firewall policy"
+- name: "SCORED | 3_6_2 | PATCH | Ensure default deny firewall policy"
   lineinfile:
-      dest: /etc/firewalld/firewalld.conf
+      dest: /etc/firewalld/firewalld_conf
       regexp: "^DefaultZone"
       line: "DefaultZone=drop"
   when: ubuntu1804cis_firewall == "firewalld" and ubuntu1804cis_setup_firewall
@@ -405,9 +405,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_2_Ensure_default_deny_firewall_policy
 
-- name: "SCORED | 3.6.2 | PATCH | Ensure default deny firewall policy"
+- name: "SCORED | 3_6_2 | PATCH | Ensure default deny firewall policy"
   firewalld:
       state: enabled
       zone: drop
@@ -417,9 +417,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_2_Ensure_default_deny_firewall_policy
 
-- name: "SCORED | 3.6.2 | PATCH | Ensure default deny firewall policy"
+- name: "SCORED | 3_6_2 | PATCH | Ensure default deny firewall policy"
   command: /bin/true
   changed_when: false
   when: ubuntu1804cis_firewall == "iptables" and ubuntu1804cis_setup_firewall
@@ -427,10 +427,10 @@
       - level1
       - scored
       - patch
-      - rule_3.6.2
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_2_Ensure_default_deny_firewall_policy
       - notimplemented
 
-- name: "SCORED | 3.6.3 | PATCH | Ensure loopback traffic is configured"
+- name: "SCORED | 3_6_3 | PATCH | Ensure loopback traffic is configured"
   command: /bin/true
   changed_when: false
   when: ubuntu1804cis_firewall == "iptables" and ubuntu1804cis_setup_firewall
@@ -438,10 +438,10 @@
       - level1
       - scored
       - patch
-      - rule_3.6.3
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_3_Ensure_loopback_traffic_is_configured
       - notimplemented
 
-- name: "NOTSCORED | 3.6.4 | PATCH | Ensure outbound and established connections are configured"
+- name: "NOTSCORED | 3_6_4 | PATCH | Ensure outbound and established connections are configured"
   command: /bin/true
   changed_when: false
   when: ubuntu1804cis_firewall == "iptables" and ubuntu1804cis_setup_firewall
@@ -449,10 +449,10 @@
       - level1
       - notscored
       - patch
-      - rule_3.6.4
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_4_Ensure_outbound_and_established_connections_are_configured
       - notimplemented
 
-- name: "SCORED | 3.6.5 | PATCH | Ensure firewall rules exist for all open ports"
+- name: "SCORED | 3_6_5 | PATCH | Ensure firewall rules exist for all open ports"
   firewalld:
       service: "{{ item }}"
       state: enabled
@@ -466,9 +466,9 @@
       - level1
       - scored
       - patch
-      - rule_3.6.5
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_5_Ensure_firewall_rules_exist_for_all_open_ports
 
-- name: "SCORED | 3.6.5 | PATCH | Ensure firewall rules exist for all open ports"
+- name: "SCORED | 3_6_5 | PATCH | Ensure firewall rules exist for all open ports"
   command: /bin/true
   changed_when: false
   when: ubuntu1804cis_firewall == "iptables" and ubuntu1804cis_setup_firewall
@@ -476,15 +476,15 @@
       - level1
       - scored
       - patch
-      - rule_3.6.5
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_6_5_Ensure_firewall_rules_exist_for_all_open_ports
       - notimplemented
 
-- name: "NOTSCORED | 3.7 | PATCH | Ensure wireless interfaces are disabled"
+- name: "NOTSCORED | 3_7 | PATCH | Ensure wireless interfaces are disabled"
   command: /bin/true
   changed_when: false
   tags:
       - level1
       - notscored
       - patch
-      - rule_3.7
+      - root_CISPP_xccdf_org_cisecurity_benchmarks_rule_3_7_Ensure_wireless_interfaces_are_disabled
       - notimplemented
